# ProjectFaith

./: .editorconfig  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.husky/: pre-commit
server/: Cargo.toml
server/bindings/: CreateRoomResponse.ts  JoinRoom.ts  Message.ts  types.ts
server/src/: auth.rs  events.rs  game.rs  main.rs
src/: App.tsx  Login.tsx  MainMenu.tsx  auth.ts  index.css  index.tsx  routes.ts  socket.ts
src/components/layout/: Background.tsx  Full.tsx  ScreenRotationGuard.tsx
src/components/ui/: AppTitle.tsx  Background.tsx  Button.tsx  Card.tsx  Input.tsx  MediaQuery.tsx  Panel.tsx  ScreenRotationGuard.tsx  Scrollbar.tsx  TabButton.tsx  Typography.tsx
src/game/: card.ts  types.ts  utils.test.ts  utils.ts
src/game/cards/: C001.ts  C002.ts  C003.ts  C004.ts  C005.ts  C006.ts  C007.ts  C008.ts  C009.ts  C010.ts  C011.ts  C012.ts  C013.ts  C014.ts  C015.ts  C016.ts  C017.ts  C018.ts  C019.ts  C020.ts  C021.ts  C022.ts  C023.ts  C024.ts  C025.ts  C026.ts  C027.ts  C028.ts  C029.ts  C030.ts  C031.ts  C032.ts  C033.ts  C034.ts  C035.ts  C036.ts  C037.ts  C038.ts  C039.ts  C040.ts  (+9 more)
src/pages/: Deck.tsx  DeckBuilder.tsx  DeckEditor.tsx  Decks.tsx  Game.tsx  Login.tsx  MainMenu.tsx  NotFound.tsx
src/store/: deck.ts
web/: package.json  pnpm-lock.yaml
