[package]
name = "project-faith"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.13"
axum = "0.8.1"
eyre = "0.6.12"
serde = { version = "1.0.217", features = ["derive"] }
socketioxide = "0.16.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ts-rs = "10.1.0"
