[package]
name = "project-faith"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.13"
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
eyre = "0.6.12"
jsonwebtoken = "9.3.0"
polodb_core = "5.1.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
socketioxide = { version = "0.16.0", features = ["state", "extensions"] }
time = "0.3"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typeshare = "1.0.4"
